--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<link rel="stylesheet"
 	href="./css/style.css">
+	 <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> FTP </title>	
 	<link href="./assets/Pixtur.otf">
 </head>
