--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 	</div>
 
 	<div class="car">
-		<img src="./assets/caronfire_2.png" width="1000" height="600" alt="cop car on fire">
+		<img id= "caronfire" src="./assets/copcar.png" width="1000" height="600" alt="cop car on fire">
 	</div>
 
 	<div class="footer">
-		<span class="footer"> ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
-		<span class="footer"> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
-		<span class="footer"> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
+		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
+		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
+		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
+
 	</div>
 
 
