--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 	<link href="./assets/Pixtur.otf">
 </head>
 <body>
-	<div class="banner">
-	<span class="header"> ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
-	<span class="header">fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
-	<span class="header">fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
+	<div id="ticker" class="banner text head">
+	<span> ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
+	<span> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
+	<span> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
 	</div>
 
 	<div class="car">
 		<img id= "caronfire" src="./assets/copcar.png" width="1000" height="600" alt="cop car on fire">
 	</div>
 
-	<div class="footer">
-		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
-		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
-		<span class="footer"> justice for black lives ✿ justice for black lives ✿ justice for black lives ✿ </span>
-
+	<div id="ticker-two" class="footer text foot">
+		<span> ✿ black power matters ✿ black power matters ✿ black power matters ✿ </span>
+		<span>black power matters ✿ black power matters ✿ black power matters ✿ </span>
+		<span>black power matters ✿ black power matters ✿ black power matters ✿ </span>
 	</div>
 
 
