--- a/index.html
+++ b/index.html
@@ -10,21 +10,27 @@
 	<link href="./assets/Pixtur.otf">
 </head>
 <body>
+	<div class="invisibox">
 	<div id="ticker" class="banner text head">
 	<span> ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
 	<span> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
 	<span> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
 	</div>
-
+</div>
+<div class="main-container">
 	<div class="car">
-		<img id= "caronfire" src="./assets/copcar.png" width="1000" height="600" alt="cop car on fire">
+		<img id= "caronfire" src="./assets/copcar.png" width="800" height="500" alt="cop car on fire">
 	</div>
+</div>
+
+	<div class="invisibox">
 
 	<div id="ticker-two" class="footer text foot">
 		<span> ✿ black power matters ✿ black power matters ✿ black power matters ✿ </span>
 		<span>black power matters ✿ black power matters ✿ black power matters ✿ </span>
 		<span>black power matters ✿ black power matters ✿ black power matters ✿ </span>
 	</div>
+</div>
 
 
 	<script src="./js/script.js"></script>
