uwu prototype modals

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	href="./css/style.css">
 	 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> FTP </title>	
-	<link href="./assets/Pixtur.otf">
-</head>
+	<title> FTP </title>
+	</head>
 <body>
+
 	<div class="invisibox">
 	<div id="ticker" class="banner text head">
 	<span> ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
@@ -17,10 +17,51 @@
 	<span> fuck the police ✿ fuck the police ✿ fuck the police ✿ fuck the police ✿ </span>
 	</div>
 </div>
+
 <div class="main-container">
+	<div class="nav-wrap">
+	<div class= "nav">
+		<ul>
+		<li id="buttonResources"class="modal-button" href="#modalTwo">resources</li>
+		<li  id="buttonAbout" class="modal-button" href="#myModal"> about </li>
+		<li id="buttonReading" class="modal-button" href= "#modalThree"> reading group </li>
+		</ul>
+	</div>
+</div>
+
+<div id="myModal" class="modal">
+<div class="modal-content">
+    <span class="close">&times;</span>
+    <h1> collectively imagining radical post-abolition futures </h1>
+    <h5> "What shall we build on the ashes of a nightmare?" - Robin D.G. Kelley </h5>
+    <p> This page was created in the soon to be historic era of 2020, when the global
+    pandemic surfaced not only in the form of a diease that attacks the respiratory system, but also as a long standing system of racialized oppression and violence.
+    America heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also utter before his murder at the hands of police in 2015. We can not allow this violent oppression to continue any longer. </p>
+  </div>
+</div>
+
+<div id="modalTwo" class="modal">
+<div class="resource-list">
+<span class="close">&times;</span>
+<div id="resourcePadBasic">
+	<h1>☺☻ ☺☻ ☺☻ ☺☻ ☺</h1>
+	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe>
+	</div>
+</div>
+</div>
+
+<div id="modalThree" class="modal">
+<div class = "readingGroup">
+	<span class="close">&times;</span>
+	<h1> abolition is the mission reading coalition </h1>
+	<h1> ♥.·:¨ ¨:·.♥ </h1>
+	<p> We will attempt to come together online at least once a month over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place Thursday, August 20th. The reading can be found <a href="#here"> here. </a></div>
+</div>
+
 	<div class="car">
 		<img id= "caronfire" src="./assets/copcar.png" width="800" height="500" alt="cop car on fire">
 	</div>
+
 </div>
 
 	<div class="invisibox">
@@ -34,5 +75,6 @@
 
 
 	<script src="./js/script.js"></script>
+
 </body>
 </html>
