--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
 </div>
 
 <div class="main-container">
+	<div class="wire"> <img src="./assets/hmm-1.png"width=100 height="500">
+	</div>
 	<div class="nav-wrap">
 	<div class= "nav">
 		<ul>
 		<li id="buttonResources"class="modal-button" href="#modalTwo">resources</li>
 		<li  id="buttonAbout" class="modal-button" href="#myModal"> about </li>
-		<li id="buttonReading" class="modal-button" href= "#modalThree"> reading group </li>
+		<li id="buttonReading" class="modal-button" href= "#modalThree"> reading coalition</li>
 		</ul>
+	</div>
+		<div class="wire2"> <img src="./assets/hmm-1.png"width=100 height="500">
 	</div>
 </div>
 
