--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
 	<link rel="stylesheet"
 	href="./css/style.css">
-	 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> FTP </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 <body>
 
@@ -19,10 +17,10 @@
 </div>
 
 <div class="main-container">
+	<div class="nav-wrap">
 	<div class="wire"> <img src="./assets/hmm-1.png"width=100 height="500">
 	</div>
-	<div class="nav-wrap">
-	<div class= "nav">
+	 <div class= "nav">
 		<ul>
 		<li id="buttonResources"class="modal-button" href="#modalTwo">resources</li>
 		<li  id="buttonAbout" class="modal-button" href="#myModal"> about </li>
@@ -31,7 +29,7 @@
 	</div>
 		<div class="wire2"> <img src="./assets/hmm-1.png"width=100 height="500">
 	</div>
-</div>
+</div> 
 
 <div id="myModal" class="modal">
 <div class="modal-content">
@@ -39,8 +37,8 @@
     <h1> collectively imagining radical post-abolition futures </h1>
     <h5> "What shall we build on the ashes of a nightmare?" - Robin D.G. Kelley </h5>
     <p> This page was created in the soon to be historic era of 2020, when the global
-    pandemic surfaced not only in the form of a diease that attacks the respiratory system, but also as a long standing system of racialized oppression and violence.
-    America heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also utter before his murder at the hands of police in 2015. We can not allow this violent oppression to continue any longer. </p>
+    pandemic surfaced not only in the form of a diease that attacks the respiratory system, but also as the increased visability of a long standing system of racialized oppression and violence.
+    When Americans heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also utter before his murder at the hands of police in 2015, chaos erupted worldwide. The Minneapolis 3rd precinct burned to the ground overnight. </p>
   </div>
 </div>
 
@@ -49,7 +47,7 @@
 <span class="close">&times;</span>
 <div id="resourcePadBasic">
 	<h1>☺☻ ☺☻ ☺☻ ☺☻ ☺</h1>
-	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe>
+	<!--<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe> -->
 	</div>
 </div>
 </div>
@@ -58,8 +56,8 @@
 <div class = "readingGroup">
 	<span class="close">&times;</span>
 	<h1> abolition is the mission reading coalition </h1>
-	<h1> ♥.·:¨ ¨:·.♥ </h1>
-	<p> We will attempt to come together online at least once a month over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place Thursday, August 20th. The reading can be found <a href="#here"> here. </a></div>
+	<h1>♥.·:¨ ¨:·.♥</h1>
+	<p> We aim to come together online at least once a month over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Thursday, August 20th</b>. We will be reading <i>The Prison Abolitionist Imaginiation: A Conversation,</i> from Jackie Wang's book, <a href="https://mitpress.mit.edu/books/carceral-capitalism"><i>Carceral Capitalism,</i></a> which can be found <a href="./assets/pdfs/wang-the-prison-abolitionist-imagination.pdf"> here. </a></div>
 </div>
 
 	<div class="car">
