--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <span class="close">&times;</span>
 <div id="resourcePadBasic">
 	<h1>☺☻ ☺☻ ☺☻ ☺☻ ☺</h1>
-	<!--<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe> -->
+	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe> 
 	</div>
 </div>
 </div>
@@ -74,7 +74,6 @@
 		<span>black power matters ✿ black power matters ✿ black power matters ✿ </span>
 	</div>
 </div>
-
 
 	<script src="./js/script.js"></script>
 
