--- a/index.html
+++ b/index.html
@@ -17,28 +17,32 @@
 </div>
 
 <div class="main-container">
-	<div class="nav-wrap">
-	<div class="wire"> <img src="./assets/hmm-1.png"width=100 height="500">
+<div class="wire"> <img src="./assets/hmm-1.png"width="100" height="500">
 	</div>
+	<div class="nav-wrap">
 	 <div class= "nav">
 		<ul>
 		<li id="buttonResources"class="modal-button" href="#modalTwo">resources</li>
-		<li  id="buttonAbout" class="modal-button" href="#myModal"> about </li>
-		<li id="buttonReading" class="modal-button" href= "#modalThree"> reading coalition</li>
+		<li  id="buttonAbout" class="modal-button" href="#myModal">about</li>
+		<li id="buttonReading" class="modal-button" href= "#modalThree">reading coalition</li>
 		</ul>
 	</div>
-		<div class="wire2"> <img src="./assets/hmm-1.png"width=100 height="500">
+		<div class="wire2"> <img src="./assets/hmm-1.png"width="100" height="500">
 	</div>
 </div> 
 
 <div id="myModal" class="modal">
 <div class="modal-content">
     <span class="close">&times;</span>
+    <br>
     <h1> collectively imagining radical post-abolition futures </h1>
+    <br>
     <h5> "What shall we build on the ashes of a nightmare?" - Robin D.G. Kelley </h5>
-    <p> This page was created in the soon to be historic era of 2020, when the global
+    <p> This webpage was created in the soon to be historic era of 2020, when the global
     pandemic surfaced not only in the form of a diease that attacks the respiratory system, but also as the increased visability of a long standing system of racialized oppression and violence.
-    When Americans heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also utter before his murder at the hands of police in 2015, chaos erupted worldwide. The Minneapolis 3rd precinct burned to the ground overnight. </p>
+    When Americans heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also utter before his murder at the hands of police in 2015, chaos erupted worldwide. This renewed chaos that couldn't possibly be ignored. We burned the Minneapolis 3rd precinct to the ground overnight, truly showing that the current systems in power can and will be broken. This webpage acts as both a whimsical archival personal reflection and an effort to connect with communuties to discuss how we might attain a future in which we have successfully dismantled the carceral state. </p>
+    <h5> "It is our duty to fight for out freedom. It is our duty to win. We must love each other, and support each other. We have nothing to lose but our chains." - Assata Shakur </h5>
+
   </div>
 </div>
 
@@ -47,7 +51,7 @@
 <span class="close">&times;</span>
 <div id="resourcePadBasic">
 	<h1>☺☻ ☺☻ ☺☻ ☺☻ ☺</h1>
-	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=400></iframe> 
+	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=200></iframe>
 	</div>
 </div>
 </div>
@@ -57,7 +61,9 @@
 	<span class="close">&times;</span>
 	<h1> abolition is the mission reading coalition </h1>
 	<h1>♥.·:¨ ¨:·.♥</h1>
-	<p> We aim to come together online at least once a month over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Thursday, August 20th</b>. We will be reading <i>The Prison Abolitionist Imaginiation: A Conversation,</i> from Jackie Wang's book, <a href="https://mitpress.mit.edu/books/carceral-capitalism"><i>Carceral Capitalism,</i></a> which can be found <a href="./assets/pdfs/wang-the-prison-abolitionist-imagination.pdf"> here. </a></div>
+	<br>
+	<p> We aim to come together online semi-regularly over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Wednesday, September 23th</b>. We will be reading <i>Politics Surrounded</i> and <i>Fantasy in The Hold</i>
+    from Stefano Harney & Fred Moten's book, <a href="https://www.minorcompositions.info/?p=516"><i>The Undercommons: Fugitive Planning & Black Study,</i></a> which can be found <a href="./assets/pdfs/Fred-Moten-Stefano-Harney-The-Undercommons.pdf"> here. </a></div>
 </div>
 
 	<div class="car">
