updating with grid

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<link rel="stylesheet"
 	href="./css/style.css">
+	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
@@ -15,11 +16,15 @@
 ((_)_  ((_)((_)_ | |(_) 
 / _` |/ _| / _` || '_ \ 
 \__,_|\__| \__,_||_.__/ 
+
+shout out 2 fiel, ege & sean for being css spirit guides
                         
  -->
 
 
 <body>
+
+	<!-- ticker 1 -->
 
 	<div class="invisibox">
 	<div id="ticker" class="banner text head">
@@ -29,20 +34,18 @@
 	</div>
 </div>
 
-<div class="main-container">
+<!-- main content -->
 
-	<div class="wire"> <img src="./assets/hmm-1.png" width="90" height="400">
-	</div>
-	
-	<div class= "nav">
+<div class="main-container">
 		<ul>
 		<li id="buttonResources"class="modal-button" href="#modalTwo">resources</li>
-		<li  id="buttonAbout" class="modal-button" href="#myModal">about</li>
-		<li id="buttonReading" class="modal-button" href= "#modalThree">reading coalition</li>
+		<li  id="buttonAbout" class="modal-button" href="#modalOne">about</li>
+		<li id="buttonReading" class="modal-button" href= "#modalThree">reading<br> coalition</li>
 		</ul>
-	</div>
 
-<div id="myModal" class="modal">
+ <div class="wire"><img src="./assets/hmm-1.png" width="90" height="400"></div>
+
+<div id="modalOne" class="modal">
 <div class="modal-content">
     <span class="close">&times;</span>
     <br>
@@ -80,6 +83,9 @@
 	<div class="car">
 		<img id= "caronfire" src="./assets/copcar.png" width="1000" height="700" alt="cop car on fire">
 	</div>
+<div class="wire2"> <img src="./assets/hmm-1.png" width="90" height="400">
+	</div>
+
 
 </div> <!-- end main containter -->
 
