--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@ shout out 2 fiel, ege & sean for being css spirit guides
     <h1> collectively imagining radical post-abolition futures </h1>
     <br>
     <h5> "What shall we build on the ashes of a nightmare?" - Robin D.G. Kelley </h5>
+    <br>
     <p> This webpage was created in the soon to be historic era of 2020, when the global
     pandemic surfaced not only in the form of a diease that attacks the respiratory system, but also as the increased visability of a long standing system of racialized oppression and violence.
-    When Americans heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also uttered before his murder at the hands of police in 2015, chaos erupted worldwide. This renewed chaos couldn't possibly be ignored. As the Minneapolis 3rd precinct burned to the ground overnight, the people proved that the current systems in power can and will be broken. This webpage acts as a whimsical, archival, and personal reflection. It also materializes as an effort to connect with communuties to share resources and discuss how we might attain a future in which we have successfully dismantled the carceral state. </p>
+    When Americans heard George Floyd gasp the words "I can't breathe", the last words that Eric Garner had also uttered before his murder at the hands of police in 2015, chaos erupted worldwide. This renewed chaos can't possibly be overlooked. As the Minneapolis 3rd precinct burned to the ground overnight, the people proved that the current systems in power can and will be broken. This webpage is not meant to act as exhaustive resource, but rather a reflection and archive of the times in the form of net art. It also materializes as an effort to connect with communuties to share resources and discuss how we might attain a future in which we have successfully dismantled the carceral state. </p>
+    <br>
     <h5> "It is our duty to fight for out freedom. It is our duty to win. We must love each other, and support each other. We have nothing to lose but our chains." - Assata Shakur </h5>
   </div>
 </div>
@@ -64,7 +66,7 @@ shout out 2 fiel, ege & sean for being css spirit guides
 <span class="close">&times;</span>
 <div id="resourcePadBasic">
 	<h1>☺☻ ☺☻ ☺☻ ☺☻ ☺</h1>
-	<!--<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=200></iframe> -->
+	<iframe name="embed_readwrite" src="https://board.net/p/black_lives_matter_resources#?showControls=true&showChat=true&showLineNumbers=true&useMonospaceFont=false" width=600 height=200></iframe>
 	</div>
 </div>
 </div>
@@ -75,8 +77,9 @@ shout out 2 fiel, ege & sean for being css spirit guides
 	<h1> abolition is the mission reading coalition </h1>
 	<h1>♥.·:¨ ¨:·.♥</h1>
 	<br>
-	<p> We aim to come together online semi-regularly over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Wednesday, September 23th</b>. We will be reading <i>Politics Surrounded</i> and <i>The University and the Undercommons</i>
+	<p> We aim to come together online semi-regularly over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Sunday, November 14th</b>. We will be reading <i>Politics Surrounded</i> and <i>The University and the Undercommons</i>
     from Stefano Harney & Fred Moten's book, <a href="https://www.minorcompositions.info/?p=516"><i>The Undercommons: Fugitive Planning & Black Study,</i></a> which can be found <a href="./assets/pdfs/Fred-Moten-Stefano-Harney-The-Undercommons.pdf"> here. </a>
+    If you have suggestions for a reading, please reach out to teetopor@protonmail.com . 
 </div>
 </div>
 
