--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 / _` |/ _| / _` || '_ \ 
 \__,_|\__| \__,_||_.__/ 
 
-shout out 2 fiel, ege & sean for being css spirit guides
+shout out 2 fiel, ege & sean for being css spirit guides. this was first site I ever used this much css on. 
                         
  -->
 
@@ -78,7 +78,7 @@ shout out 2 fiel, ege & sean for being css spirit guides
 	<h1>♥.·:¨ ¨:·.♥</h1>
 	<br>
 	<p> We aim to come together online semi-regularly over the course of this year to read and discuss liberatory references and abolition thinking. The next abolition coalition reading group will take place <b> Sunday, November 15th</b>. We will be reading <i>Fantasy in the Hold</i> 
-    from Stefano Harney & Fred Moten's book, <a href="https://www.minorcompositions.info/?p=516"><i>The Undercommons: Fugitive Planning & Black Study,</i></a> which can be found <a href="./assets/pdfs/Fred-Moten-Stefano-Harney-The-Undercommons.pdf"> here. </a>
+    from Stefano Harney & Fred Moten's book, <a href="https://www.minorcompositions.info/?p=516"><i>The Undercommons: Fugitive Planning & Black Study,</i></a> which can be found <a href="./assets/pdfs/fantasyinthehold.pdf"> here. </a>
     <br>
     If you have suggestions for a reading, please reach out to teetopor@protonmail.com . 
 </div>
